Hold animation for tabs

--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -26,19 +26,18 @@
         /* ending ENTER animation */
         .messageout-enter-active {
             opacity: 1;
-            transition: opacity 300ms ease-in;
+            transition: all 300ms ease-in;
         }
         
         /* starting EXIT animation */
         .messageout-exit {
-            position: absolute;
             opacity: 1;
         }
 
         /* ending ENTER animation */
         .messageout-exit-active {
             opacity: 0;
-            transition: opacity 300ms ease-in;
+            transition: all 300ms ease-in;
         }
 
     }
