Formatting department buttons

--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -288,6 +288,10 @@
                 font-style: normal;
                 font-weight: 600;
                 line-height: normal;
+
+                button {
+                    text-align: left;
+                }
             }
         
             .department-link {
