more changes for course abouts
- styling tweaks
- added certificate track info
- split out the enroll app into two parts (sort of), so the course info displays separately

--- a/frontend/public/scss/product-details.scss
+++ b/frontend/public/scss/product-details.scss
@@ -2,6 +2,7 @@
 
 .product-page {
   position: relative;
+  margin-top: 1.5rem;
 
   @include media-breakpoint-down(sm) {
     h2 {
@@ -236,7 +237,7 @@
         padding: 10px 0;
 
         .row {
-          margin: 10px 0;
+          margin: 20px 0;
         }
 
         .enrollment-info-icon {
@@ -250,6 +251,14 @@
 
           .enrollment-effort {
             font-size: smaller;
+          }
+
+          .badge-pacing {
+            background-color: $black;
+            text-transform: uppercase;
+            margin-left: .5rem;
+            padding: 3px;
+            font-weight: normal;
           }
         }
       }
