--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -9,6 +9,8 @@
         margin-left: 0;
         padding-left: 0;
         padding-right: 0;
+        width: 100%;
+        max-width: revert;
 
         .row {
             margin-right: 0;
@@ -25,7 +27,7 @@
 
         .catalog-count-animation {
 
-            .test-enter {
+            .count-enter {
                 right: 0;
                 width: inherit;
                 position: absolute;
@@ -34,13 +36,13 @@
             }
             
             /* ending ENTER animation */
-            .test-enter-active {
+            .count-enter-active {
                 opacity: 1;
                 transition: opacity 300ms ease-in;
             }
             
             /* starting EXIT animation */
-            .test-exit {
+            .count-exit {
                 right: 0;
                 width: inherit;
                 position: absolute;
@@ -49,7 +51,7 @@
             }
     
             /* ending ENTER animation */
-            .test-exit-active {
+            .count-exit-active {
                 opacity: 0;
                 transition: opacity 300ms ease-in;
             }
