--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -4,7 +4,7 @@
 #course-catalog-navigation {
     display: flex;
 
-    .container {
+    .container-fluid {
         margin-right: 0;
         margin-left: 0;
         padding-left: 0;
@@ -18,11 +18,14 @@
     }
 
     #tab-row {
-        margin-left: 0;
         height: 70px;
+        @include media-breakpoint-up(md) {
+            margin-left: 0;
+        }
 
         .col {
             padding-left: 0;
+            padding-right: 0;
         }
 
         .catalog-count-animation {
@@ -74,15 +77,24 @@
         }
     
         #tabs {
-            display: inline-flex;
             align-items: flex-start;
-            gap: 20px;
-            padding-left: 24px;
+            margin-left: 24px;
             padding-top: 30px;
+            margin-right: 24px;
             font-size: 16px;
             font-style: normal;
             font-weight: 700;
             line-height: normal;
+            flex-direction: row;
+            flex-wrap: nowrap;
+
+            // @include media-breakpoint-down(sm) {
+            //     width: 100%;
+            // }
+
+            @include media-breakpoint-up(md) {
+                gap: 20px;
+            }
         
             .selected-tab {
                 display: flex;
@@ -94,6 +106,7 @@
                 -webkit-transition: 300ms;
                 transition-timing-function: ease-out;
                 transition: 300ms;
+                justify-content: center;
             }
             
             .unselected-tab {
@@ -105,34 +118,52 @@
                 -webkit-transition: 300ms;
                 transition-timing-function: ease-out;
                 transition: 300ms;
+                border-bottom: 2px solid var(--border-grey, #DFE5EC);
+                justify-content: center;
             }
         }
     }
 
     .catalog-animation {
+
         /* starting ENTER animation */
         .messageout-enter {
             position: absolute;
+            opacity: 0;
+            @include media-breakpoint-down(sm) {
+                width: initial;
+              }
         }
         
         /* ending ENTER animation */
         .messageout-enter-active {
             position: absolute;
             opacity: 1;
-            transition: all 300ms ease-in;
+            @include media-breakpoint-down(sm) {
+                width: initial;
+              }
+            transition: opacity 300ms ease-in-out;
+
         }
         
         /* starting EXIT animation */
         .messageout-exit {
             position: absolute;
             opacity: 1;
+            @include media-breakpoint-down(sm) {
+                width: initial;
+              }
         }
 
         /* ending ENTER animation */
         .messageout-exit-active {
             position: absolute;
             opacity: 0;
-            transition: all 300ms ease-in;
+            transition: opacity 300ms ease-in-out;
+
+            @include media-breakpoint-down(sm) {
+                width: initial;
+              }
         }
 
     }
@@ -140,14 +171,19 @@
     #catalog-grid {
         display: flex;
         align-items: flex-start;
-        gap: 24px;
         margin-top: 20px;
         margin-left: 24px;
         padding-left: 0;
         margin-right: 10px;
 
+        @include media-breakpoint-up(md) {
+            gap: 24px;
+          }
+
         a {
-            width: inherit;
+            @include media-breakpoint-up(md) {
+                width: inherit;
+              }
             text-decoration: none;
             padding-left: inherit;
             padding-right: inherit;
