--- a/frontend/public/scss/product-faculty-members.scss
+++ b/frontend/public/scss/product-faculty-members.scss
@@ -57,7 +57,7 @@
       float: left;
       height: 110px;
       width: 110px;
-      border-radius: 50%;
+      border-radius: 4px;
       object-fit: cover;
       margin-right: 24px;
 
